@@ -23,12 +23,12 @@
 sliceprint \- slice documents with long lines.
 
 .SH SYNOPSIS
-.B sliceprint \f1[\f2enscript_options\f1]\f3 \f1[\f2files\f1]\f3
+.B sliceprint \f1[\-o\f2file\f1]\f3 \f1[\f2enscript_options\f1]\f3 \f1[\f2files\f1]\f3
 
 .SH DESCRIPTION
 
-XXX
-
+\f3Sliceprint\f1 is a wrapper around the \f3enscript(1)\f1\ \-\-slice option.
+Output slices are written to \f2file\f1.1, \f2file\f1.2 and so on.
 
 .SH SEE ALSO
 enscript(1)
